--- a/style.css
+++ b/style.css
@@ -8,8 +8,31 @@ body {
     font-size: 18px;
 }
 
+img {
+    width: 100%;
+    display: block;
+    height: auto;
+}
+
 h3 {
     font-size: 26px;
+}
+
+h1 {
+    font-size: 22px;
+}
+
+h2 {
+    font-size: 40px;
+    color:rgb(199, 44, 85)
+}
+
+section {
+    scroll-margin-top: 100px;
+}
+
+.section__item {
+    margin: 80px 0;
 }
 
 .header {
@@ -26,7 +49,7 @@ h3 {
 }
 
 .main {
-    padding: 130px 0;
+    padding: 130px 20px;
     grid-area: main;
     background-color: #1b1b1b;
 
@@ -43,7 +66,6 @@ h3 {
     width: 100px;
     height: 100px;
     background-color: rgb(119, 30, 148);
-    margin: 5px;
     border: 1px solid white;
     display: grid;
     place-content: center;
@@ -70,14 +92,15 @@ h3 {
 .sidebar {
     grid-area: sidebar;
     background-color: #333;
-    margin-top: 110px;
+    margin-top: 80px;
     z-index: 9;
+    position: fixed;
+    height: 100vh;
 }
 
 .sidebar__menu {
     padding: 10px;
     margin: 0;
-    position: fixed;
     list-style: none;
     max-width: 480px;
 }
@@ -85,12 +108,13 @@ h3 {
 .sidebar__item {
     margin-bottom: 10px;
     text-align: left;
+    display: flex;
+    max-width: 300px;
 }
 
 .sidebar__link {
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
-
 }
 
 .container-inline {
@@ -102,7 +126,7 @@ h3 {
 
 .app {
     display: grid;
-    grid-template-columns: minmax(480px, 1fr) repeat(3, 1fr);
+    grid-template-columns: 300px repeat(3, 9fr);
     grid-template-rows: auto;
     grid-template-areas:
         "header header header header"
@@ -154,9 +178,140 @@ h3 {
 .g-t-b {
     grid-template-columns: 1fr 3fr 5fr;
     grid-template-rows: 1fr 3fr 5fr;
+    grid-gap: 15px;
 }
 
 .g-t-b .box {
     width: 100%;
     height: 100%;
+}
+
+.hamburger {
+    position: absolute;
+    right: 20px;
+    top: 25px;
+    font-size: 32px;
+    display: none;
+    cursor: pointer;
+}
+
+.g-t-a {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: 
+    "header header header header"
+    "main main main side"
+    "footer footer footer footer"
+}
+
+.gallery {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
+}
+
+
+
+.gallery__item_3 {
+    grid-row: 1/3;
+    grid-column: 2/3;
+}
+
+.gallery__item_5 {
+    grid-row: 1/2;
+    grid-column: 3/5;
+}
+
+/* .gallery__item_5 {
+    grid-row: 2/3;
+    grid-column: 1/3;
+} */
+
+
+.box_footer, .box_header,
+.box_main, .box_side {
+    width: 100%;
+    height: 100px;
+    margin: 0;
+}
+
+.box_main, .box_side {
+    height: 400px;
+}
+
+.box_footer {
+    grid-area: footer;
+}
+
+.box_header {
+    grid-area: header;
+}
+
+.box_main {
+    grid-area: main;
+}
+
+.box_side {
+    grid-area: side;
+}
+
+.con-ord {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 100px);
+}
+
+.con-ord .box {
+    width: 100%;
+}
+
+.box-1, .box-2, .box-3, .box-4 {
+    height: auto;
+    margin: 0;
+}
+
+.box-1 {
+    grid-row-end: 4;
+    grid-row-start: 3;
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.box-2 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.box-3 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.box-4 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+@media screen and (max-width: 960px) {
+    .sidebar {
+        position: fixed;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        transform: translateX(-100%);
+        transition: .6s ease transform;
+    }
+    .hamburger {
+        display: block;
+    }
+    .app {
+        grid-template-columns: 0fr repeat(3, 9fr);
+    }
+}
+
+.sidebar_active {
+    transform: translateX(0) !important;
 }
