--- a/style.css
+++ b/style.css
@@ -9,13 +9,16 @@ body {
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
     display: block;
     height: auto;
 }
 
 h3 {
     font-size: 26px;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 25px;
 }
 
 h1 {
@@ -25,6 +28,10 @@ h1 {
 h2 {
     font-size: 40px;
     color:rgb(199, 44, 85)
+}
+
+.colored {
+    color: rgb(199, 44, 85)
 }
 
 section {
@@ -67,8 +74,9 @@ section {
     height: 100px;
     background-color: rgb(119, 30, 148);
     border: 1px solid white;
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 28px;
 }
 
@@ -115,6 +123,10 @@ section {
 .sidebar__link {
     font-size: 16px;
     color: #fff;
+}
+
+.sidebar__link i {
+    margin-right: 5px;
 }
 
 .container-inline {
@@ -206,24 +218,70 @@ section {
 .gallery {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr;
+    grid-auto-flow: row dense;
 }
 
-
+.gallery__item {
+    height: auto;
+}
 
 .gallery__item_3 {
     grid-row: 1/3;
-    grid-column: 2/3;
+    grid-column: 3/4;
 }
 
 .gallery__item_5 {
-    grid-row: 1/2;
-    grid-column: 3/5;
-}
-
-/* .gallery__item_5 {
     grid-row: 2/3;
     grid-column: 1/3;
-} */
+}
+
+.gallery__item img {
+    height: 100%;
+    object-fit: cover;
+}
+
+.implicit {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 100px 100px;
+    grid-gap: 30px;
+    grid-auto-columns: 150px;
+    grid-auto-rows: 100px;
+    grid-auto-flow: column;
+}
+
+.impl-3 {
+    grid-auto-columns: 300px;
+    grid-auto-rows: 300px;
+}
+
+.impl-2 .box {
+    width: 50px;
+    height: 50px;
+}
+
+.impl-2 {
+    grid-auto-flow: column;
+}
+
+.implicit-dense {
+    grid-auto-flow: dense;
+}
+
+.grid-block .container {
+    place-content: center;
+}
+
+.implicit .box {
+    width: auto;
+}
+
+.implicit .box:first-child {
+    grid-column-start: -1;
+}
+
+.implici .boxt:nth-child(2) {
+    grid-row-start: 4;
+}
 
 
 .box_footer, .box_header,
@@ -295,7 +353,99 @@ section {
     grid-row-end: 4;
 }
 
+.auto-fill {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+.auto-fill .box, .auto-fit .box, .ram .box {
+    width: auto;
+}
+
+.auto-fit {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.item-box-2 {
+    align-self: end;
+    justify-self: end;
+}
+
+.item-box-3 {
+    justify-self: stretch;
+    width: auto;
+}
+
+.item-box-4 {
+    justify-self: center;
+}
+
+.grid-items {
+    grid-row-gap: 10px;
+}
+
+.align-items {
+    grid-template-columns: repeat(4, 1fr);
+    height: 500px;
+}
+
+.align-items .box {
+    width: 80px;
+}
+
+.align-box-2 {
+    align-self: stretch;
+    height: auto;
+}
+
+.align-box-3 {
+    align-self: end;
+}
+
+.align-box-4 {
+    align-self: center;
+}
+
+.con-expl {
+    grid-template-columns: repeat(2, 300px);
+    grid-template-rows: repeat(2, 300px);
+    grid-gap: 15px;
+    place-content: center;
+}
+
+.con-expl .box, .impl-3 .box {
+    width: auto;
+    height: auto;
+}
+
+.ram {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: auto;
+}
+
+
+
 @media screen and (max-width: 960px) {
+    .gallery {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-row-gap: 25px;
+    }
+
+    .gallery__item img {
+        width: 75%;
+        margin: 0 auto;
+    }
+
+
+    .gallery__item_3 {
+        grid-column: auto;
+        grid-row: auto;
+    }
+
+    .gallery__item_5 {
+        grid-column: auto;
+        grid-row: auto;
+    }
     .sidebar {
         position: fixed;
         left: 0;
@@ -314,4 +464,11 @@ section {
 
 .sidebar_active {
     transform: translateX(0) !important;
+}
+
+@media screen and (max-width: 640px) {
+    .con-expl {
+        grid-template-columns: 150px 150px;
+        grid-template-rows: 150px 150px;
+    }
 }
