--- a/style.css
+++ b/style.css
@@ -422,6 +422,69 @@ section {
     grid-template-rows: auto;
 }
 
+.form {
+    background-color: #fff;
+    border-radius: 20px;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 40px 60px 10px;
+}
+
+.form__inputs {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    justify-content: center;
+    grid-column-gap: 45px;
+    grid-row-gap: 15px;
+}
+
+.form__item {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    justify-items: flex-start;
+}
+
+.form__input {
+    padding: 5px;
+    color: rgb(119, 30, 148);
+    border-radius: 10px;
+    font-size: 20px;
+    border: 1px solid #333;
+}
+
+.form__input:focus {
+    border: 1px solid rgb(119, 30, 148);
+    outline: none;
+}
+
+label {
+    color:rgb(119, 30, 148);
+    font-weight: 700;
+}
+
+.form__item_button {
+    grid-column: 1/3;
+    margin-top: 25px;
+}
+
+.form__button {
+    justify-self: center;
+    background-color: #fff;
+    padding: 6px 14px;
+    border: 1px solid rgb(119, 30, 148);
+    transition: 0.4s ease all;
+    color:rgb(119, 30, 148);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.form__button:hover {
+    border: 1px solid transparent;
+    background-color: rgb(119, 30, 148);
+    color: #fff;
+}
 
 
 @media screen and (max-width: 960px) {
@@ -466,9 +529,15 @@ section {
     transform: translateX(0) !important;
 }
 
+
+
 @media screen and (max-width: 640px) {
     .con-expl {
         grid-template-columns: 150px 150px;
         grid-template-rows: 150px 150px;
+    }
+
+    h2 {
+        font-size: 26px;
     }
 }
